# nest

./: .gitattributes  .gitignore  .nest_manifest.json  CHANGELOG.md  Makefile  README.md  cliff.toml  prd.md  pyproject.toml
.github/agents/: bmad-agent-epic-runner.md  nest-enricher.agent.md  nest-glossary.agent.md  nest.agent.md
_bmad-output/: e2e-testing-framework-requirements.md  project-context.md
_bmad-output/implementation-artifacts/: 1-1-project-scaffolding.md  1-2-vs-code-agent-file-generation.md  1-3-ml-model-download-and-caching.md  1-4-init-command-cli-integration.md  10-1-multi-agent-template-bundle.md  10-2-init-doctor-multi-agent-integration.md  10-3-multi-agent-migration-service.md  2-1-file-discovery-and-checksum-engine.md  2-10-folder-naming-refactor.md  2-11-context-text-file-support.md  2-12-unified-source-folder.md  2-13-metadata-directory-consolidation.md  2-14-cross-platform-utf8-encoding.md  2-15-sync-error-logging-consolidation.md  2-16-cross-platform-shared-knowledge-base.md  2-2-docling-document-processing.md  2-3-output-mirroring-and-file-writing.md  2-4-manifest-tracking-and-updates.md  2-5-master-index-generation.md  2-6-orphan-cleanup.md  2-7-sync-command-flags-and-error-handling.md  2-8-sync-command-cli-integration.md  2-9-e2e-testing-framework.md  3-1-project-status-display.md  3-2-environment-validation.md  3-3-ml-model-validation.md  3-4-project-state-validation.md  3-5-issue-remediation.md  (+26 more)
_nest_context/: 00_MASTER_INDEX.md
docs/: docling-picture-description-guide.md
scripts/: release.sh
tests/: conftest.py
(+153 files in other folders)
