[project]
name = "nest"
version = "1.0.0"
description = "AI-powered document context tool for consultants"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "jinja2>=3.1.0",
    "docling>=2.0.0",
]

[project.scripts]
nest = "nest.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nest"]

[tool.hatch.build.targets.wheel.force-include]
"src/nest/agents/templates" = "nest/agents/templates"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "All"
typeCheckingMode = "strict"
include = ["src"]
exclude = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "PT"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["nest"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
]
